@@ -399,6 +399,9 @@
 			<td>{subtitle}</td>
 		</tr>
 		<tr>
+			<td><fieldset>{categories}</fieldset></td>
+		</tr>
+		<tr>
 			<td>{teaser}</td>
 		</tr>
 		<tr>
